Documentation edits made through Mintlify web editor

--- a/introduction/billing-and-plans.mdx
+++ b/introduction/billing-and-plans.mdx
@@ -1,15 +1,16 @@
 ---
-title: Billing and Plans
-description: Learn about Epsilo’s subscription plans, billing cycles, and how to manage payments in your workspace.
+title: "Billing and Plans"
+description: "Learn about Epsilo’s subscription plans, billing cycles, and how to manage payments in your workspace."
 ---
-Epsilo offers flexible pricing plans for teams of all sizes — from small operators to enterprise networks.  
+
+Epsilo offers flexible pricing plans for teams of all sizes — from small operators to enterprise networks.\
 This guide explains how billing works, who can access invoices, and how to upgrade or manage your subscription.
 
 ---
 
-## Overview
+## /Overview
 
-Billing is managed at the **workspace level**.  
+Billing is managed at the **workspace level**.\
 Each workspace has one **Owner** (or designated Admin) responsible for payment details, invoices, and plan management.
 
 You can access billing at any time from:
@@ -20,11 +21,11 @@ You can access billing at any time from:
 
 ## Plan Options
 
-| Plan | Best for | Key Features |
-|------|-----------|--------------|
-| **Starter** | Individual operators or small teams | 1 workspace, up to 3 storefronts, standard automation |
-| **Growth** | Multi-store or regional teams | Unlimited storefronts, cross-channel scheduling, AI reporting (Botep) |
-| **Enterprise** | Agencies or large-scale operations | SSO access, workspace hierarchy, custom automation scripts, dedicated support |
+| Plan           | Best for                            | Key Features                                                                  |
+| -------------- | ----------------------------------- | ----------------------------------------------------------------------------- |
+| **Starter**    | Individual operators or small teams | 1 workspace, up to 3 storefronts, standard automation                         |
+| **Growth**     | Multi-store or regional teams       | Unlimited storefronts, cross-channel scheduling, AI reporting (Botep)         |
+| **Enterprise** | Agencies or large-scale operations  | SSO access, workspace hierarchy, custom automation scripts, dedicated support |
 
 > 💡 **Tip:** You can upgrade your plan anytime from within your workspace — changes apply immediately.
 
@@ -34,10 +35,10 @@ You can access billing at any time from:
 
 You can choose between **monthly** or **annual** billing cycles.
 
-| Billing Type | Description |
-|---------------|-------------|
-| **Monthly** | Pay month-to-month with flexible cancellation. |
-| **Annual** | Prepay for 12 months and receive a discounted rate (recommended for established teams). |
+| Billing Type | Description                                                                             |
+| ------------ | --------------------------------------------------------------------------------------- |
+| **Monthly**  | Pay month-to-month with flexible cancellation.                                          |
+| **Annual**   | Prepay for 12 months and receive a discounted rate (recommended for established teams). |
 
 Invoices are sent automatically to the **workspace owner’s registered email**.
 
@@ -48,35 +49,38 @@ Invoices are sent automatically to the **workspace owner’s registered email**.
 ## Managing Your Subscription
 
 ### View or Update Plan
-1. Open **Workspace Settings → Billing**.  
-2. View your current plan and usage summary.  
-3. Click **Change plan** to upgrade or downgrade.  
+
+1. Open **Workspace Settings → Billing**.
+2. View your current plan and usage summary.
+3. Click **Change plan** to upgrade or downgrade.
 
 Plan changes take effect immediately, and any prorated charges are applied to the next billing cycle.
 
 ### Update Payment Method
-- Click **Payment settings** under Billing.  
-- Add or update a credit card or enterprise invoice method.  
+
+- Click **Payment settings** under Billing.
+- Add or update a credit card or enterprise invoice method.
 - Changes are applied securely via our payment partner.
 
 ### Download Invoices
-1. Go to **Billing → Invoices**.  
-2. Select a month or date range.  
+
+1. Go to **Billing → Invoices**.
+2. Select a month or date range.
 3. Click **Download PDF**.
 
 ---
 
 ## Ownership and Access
 
-Only **Owners** can manage billing and view invoices.  
+Only **Owners** can manage billing and view invoices.\
 Admins can view plan details but cannot modify payments.
 
-| Action | Owner | Admin | Member | Viewer |
-|--------|:------:|:------:|:------:|:------:|
-| View plan details | ✅ | ✅ | ❌ | ❌ |
-| Update payment method | ✅ | ❌ | ❌ | ❌ |
-| Download invoices | ✅ | ✅ | ❌ | ❌ |
-| Change plan | ✅ | ❌ | ❌ | ❌ |
+| Action                | Owner | Admin | Member | Viewer |
+| --------------------- | :---: | :---: | :----: | :----: |
+| View plan details     | ✅     | ✅     | ❌      | ❌      |
+| Update payment method | ✅     | ❌     | ❌      | ❌      |
+| Download invoices     | ✅     | ✅     | ❌      | ❌      |
+| Change plan           | ✅     | ❌     | ❌      | ❌      |
 
 > 🔒 Epsilo never stores raw credit card information. All payments are processed securely via Stripe or enterprise invoicing.
 
@@ -85,6 +89,7 @@ Admins can view plan details but cannot modify payments.
 ## Upgrading to Enterprise
 
 The **Enterprise plan** includes:
+
 - SSO authentication (Okta, Google Workspace, Microsoft 365)
 - Custom automation workflows and scripts
 - SLA-backed support
@@ -92,25 +97,26 @@ The **Enterprise plan** includes:
 - Regional data hosting options
 
 To upgrade:
-1. Contact your Epsilo representative or  
-2. Email **sales@epsilo.io** with your workspace name and requirements.
+
+1. Contact your Epsilo representative or
+2. Email [**sales@epsilo.io**](mailto:sales@epsilo.io) with your workspace name and requirements.
 
 ---
 
 ## Cancellations and Refunds
 
-- You can cancel your plan at any time before the next billing cycle.  
-- Cancellation does **not** delete your data; all reports and automations remain accessible in read-only mode for 30 days.  
+- You can cancel your plan at any time before the next billing cycle.
+- Cancellation does **not** delete your data; all reports and automations remain accessible in read-only mode for 30 days.
 - Refunds are handled on a case-by-case basis for annual contracts.
 
-> 🧠 For account recovery or migration support, reach out to **support@epsilo.io**.
+> 🧠 For account recovery or migration support, reach out to [**support@epsilo.io**](mailto:support@epsilo.io).
 
 ---
 
 ## Related Topics
 
-- [Security](./security) — How Epsilo protects your billing and data.  
-- [Members and Roles](./members-and-roles) — Understand ownership and permissions.  
+- [Security](./security) — How Epsilo protects your billing and data.
+- [Members and Roles](./members-and-roles) — Understand ownership and permissions.
 - [Exporting Data](./exporting-data) — Retrieve reports and automation logs.
 
-> 💬 For any billing-related questions, contact our Finance team at **billing@epsilo.io**.
+> 💬 For any billing-related questions, contact our Finance team at [**billing@epsilo.io**](mailto:billing@epsilo.io).
