Documentation edits made through Mintlify web editor

--- a/how-to-guide/gmv-max.mdx
+++ b/how-to-guide/gmv-max.mdx
@@ -1,6 +1,61 @@
 ---
-title: "Shopee’s GMV Max"
+title: "Shopee’s GMV Max: Epsilo’s solutions for maximizing results from GMV Max"
 description: "Epsilo optimizes Shopee GMV Max ads via campaign-level management, 30-minute budget redistribution, and quick problem detection tools."
 ---
 
-# **Epsilo’s solutions for maximizing results from GMV Max**
+<Note>
+  TLDR
+
+  GMV Max is Shopee's AI ad tool that optimizes for maximum sales across all platform placements. Epsilo helps merchants overcome its limited SKU control and budget pacing issues through campaign-level management, attribute scheduling, automated 30-minute budget redistribution to top performers, and tools for quick problem detection and resolution at scale.
+</Note>
+
+## **What Is GMV Max on Shopee?**
+
+GMV Max is Shopee’s smart advertising model that automatically optimizes to maximize Gross Merchandise Value (GMV). It runs across Search, Discovery, Video, Games, and Coins placements so you don’t pick placements manually.
+
+There are 2 levers you can control with GMV max:
+
+1. **SKUs budget:** This is how much you are willing to spend per SKU in that day.
+2. **Target ROAS**: This is where you choose a return on ad spend (ROAS) you’d like, and the algorithm works to meet it.
+
+---
+
+## **Advantages of GMV Max**
+
+- **Automated optimization**: AI adjusts CPC to capture opportunities in real time.
+- **Full placement coverage**: Ensures visibility across all Shopee ad surfaces.
+- **Flexible goal setting**: Choose No ROAS target to maximize GMV or Custom ROAS for efficiency.
+
+---
+
+## **Challenges of GMV Max**
+
+- **Limited control**: AI decides placement and SKU focus, leaving some SKUs underexposed.
+- **Budget drain**: Spend can be front-loaded, reducing ad live time later in the day.
+- **Efficiency trade-off**: Lower ROAS target drives growth but risks overspending; higher ROAS improves efficiency but reduces traffic.
+- **Lacks insight**: Native reports give limited insight into how AI allocates spend and why.
+
+---
+
+## **Epsilo solutions for GMV Max**
+
+**Manage SKUs in campaigns**
+
+- Epsilo enhances campaign management by allowing users to group SKUs that share the same budget, target, and schedule. This streamlines ad and budget management by making actions consistent across SKUs, enabling automatic budget management, and ensuring effective execution of budget plans at the campaign level.
+- Dive into what campaign structures can work best for you in [<u>this article</u>](https://help.epsilo.io/en/articles/12058043-thinking-in-campaigns-strategies-for-grouping-and-organizing-ad-objects-skus-into-campaigns)
+
+**Manage budget with Budget distribution**
+
+- Our Budget distribution feature automatically reallocates budget across SKUs in a campaign every 30 minutes. High-performing SKUs always have enough spend to stay live, saving optimizers hours every week manually managing budgets.
+- Find out more about how Budget distribution works in [<u>this article</u>](https://help.epsilo.io/en/articles/12165166-budget-distribution-automated-budget-allocation-from-one-budget-to-many)
+
+**Improve productivity with Custom views & Mass action**
+
+- Productivity features like advanced filters, sorts, and personalized views help operators quickly detect issues across thousands of SKUs in just a few clicks. Combined with the Mass action feature, teams can act fast to resolve problems at scale, saving time and keeping campaigns on track.
+- Filter by custom or target ROAS, as well as by the percentage of target ROAS achieved versus actual ROAS to make quick, real-time adjustments.
+- Learn more about [<u>custom views</u>](https://help.epsilo.io/en/articles/12114468-setting-up-views-advanced-filtering-and-sorting) or [<u>mass actions</u>](https://help.epsilo.io/en/articles/12114470-multi-row-optimization-bulk-actions-and-mass-actions) here
+
+**Schedule ad object attributes ahead of time**
+
+- Create as many schedules as you need for target ROAS, ad object (SKU) budget, and status so that you don't have to stay up at midnight to make changes you planned at the beginning of the month.
+- Find out more about [<u>attribute scheduling </u>](https://help.epsilo.io/en/articles/12056878-attribute-scheduling-how-to-use-the-scheduling-feature-for-budget-status-target-and-distribution-model)here.
