Documentation edits made through Mintlify web editor

--- a/how-to-guide/budget-distribution.mdx
+++ b/how-to-guide/budget-distribution.mdx
@@ -70,8 +70,7 @@ Choose a model that matches your goal:
 - Additionally, you cannot set a budget below today’s spend or the marketplace minimum. To reduce the budget for the next day, schedule the budget ahead of time.
 - After you’ve adjusted a budget for Ad objects, if you are not sure that the Campaign budget is sufficient, try reapplying a new value to the Campaign daily budget, the system will notify you if the budget is no longer sufficient.
 
-## \
-FAQs
+## FAQs
 
 <Expandable title="Can I disable budget distribution?">
   Not directly, but you can set campaign budget to _No Limit_ if you want full manual control or Lock the budget of all Ad Objects inside the selected campaign.
