--- a/how-to-guide/hyper-automation-scripts.mdx
+++ b/how-to-guide/hyper-automation-scripts.mdx
@@ -73,8 +73,7 @@ In the **Ad object script** or **Ad placement script** table, you’ll need to l
 
 You'll see a pop-up showing each time the script triggered, whether conditions were met, and what attribute values changed.
 
-## \
-FAQs
+## FAQs
 
 <Expandable title="How often will scripts run while they are active?">
   Within your selected time frame, scripts will check if your condition is true every 15 minutes and trigger the action if the condition is met.
