--- a/introduction/billing-and-plans.mdx
+++ b/introduction/billing-and-plans.mdx
@@ -8,7 +8,7 @@ This guide explains how billing works, who can access invoices, and how to upgra
 
 ---
 
-## /Overview
+## Overview
 
 Billing is managed at the **workspace level**.\
 Each workspace has one **Owner** (or designated Admin) responsible for payment details, invoices, and plan management.
