Documentation edits made through Mintlify web editor

--- a/getting-started/create-workspace.mdx
+++ b/getting-started/create-workspace.mdx
@@ -3,8 +3,7 @@ title: "Getting started"
 description: "Navigating your workspace, tables, and dashboards"
 ---
 
-
-> TL;DR\
+> taTL;DR\
 > Epsilo is built around tables. Use the left-side navigation bar to locate tables, which display real-time data that you can customize by adjusting time ranges, metrics, and filters.\
 > Your dashboard views can be saved and shared with team members.
 
@@ -119,4 +118,4 @@ If you find one you want, click its kebab menu and select **Clone view** to add 
 ## Details
 
 Mastering workspace navigation and table configuration is key to getting the most from Epsilo.\
-Use saved views and shared workflows to keep your analysis consistent, collaborative, and fast.
+Use saved views and shared workflows to keep your analysis consistent, collaborative, and fas
