Documentation edits made through Mintlify web editor

--- a/getting-started/invite-team.mdx
+++ b/getting-started/invite-team.mdx
@@ -1,5 +1,5 @@
 ---
-title: "Members and Roles"
+title: "Invite team member"
 description: "Manage permissions and access levels for your team inside an Epsilo workspace."
 ---
 
