--- a/getting-started/your-first-campaign.mdx
+++ b/getting-started/your-first-campaign.mdx
@@ -1,5 +1,5 @@
 ---
-title: "Navigating Epsilo"
+title: "Your first campaign"
 description: "Learn how to move through the Epsilo workspace, explore dashboards, and find key automation modules quickly."
 ---
 
