Documentation edits made through Mintlify web editor

--- a/i-playbooks/ad-spend-optimization.mdx
+++ b/i-playbooks/ad-spend-optimization.mdx
@@ -1,5 +1,5 @@
 ---
-title: "Ad spend optimization: Rules and best practices"
+title: "Ad spend optimization"
 description: "A guide to optimizing ad spend through SKU management, bid adjustment, and campaign grouping for higher ROAS and GMV efficiency."
 ---
 
