--- a/b-workspace/workspace-setting.mdx
+++ b/b-workspace/workspace-setting.mdx
@@ -1,5 +1,5 @@
 ---
-title: Workspaces
+title: Workspaces setting
 description: Learn how workspaces organize your storefronts, automations, and team members in Epsilo.
 ---
 A **workspace** is your team’s dedicated environment inside Epsilo.  
