Documentation edits made through Mintlify web editor

--- a/b-workspace/billing-and-plans.mdx
+++ b/b-workspace/billing-and-plans.mdx
@@ -1,5 +1,5 @@
 ---
-title: "Billing and Plans"
+title: "Billing and plans"
 description: "Learn about Epsilo’s subscription plans, billing cycles, and how to manage payments in your workspace."
 ---
 
