--- a/b-workspace/invite-members.mdx
+++ b/b-workspace/invite-members.mdx
@@ -1,5 +1,5 @@
 ---
-title: Invite Members
+title: Invite members
 description: Learn how to invite teammates to your Epsilo workspace and assign roles for collaboration.
 ---
 Collaboration in Epsilo starts by inviting your team to your workspace.  
