--- a/b-workspace/login-methods.mdx
+++ b/b-workspace/login-methods.mdx
@@ -1,5 +1,5 @@
 ---
-title: Login Methods
+title: Login methods
 description: Learn how to sign in securely to Epsilo using SSO, Google, Microsoft, or email authentication.
 ---
 Epsilo supports multiple secure authentication methods for different organizational needs.  
