--- a/b-workspace/channels-and-integrations.mdx
+++ b/b-workspace/channels-and-integrations.mdx
@@ -1,5 +1,4 @@
 ---
-title: 'Connect and integration'
-description: 'Description of your new file.'
+title: "Connect and integration"
+description: "Description of your new file."
 ---
-
