--- a/a-getting-started/start-guide-new-admin.mdx
+++ b/a-getting-started/start-guide-new-admin.mdx
@@ -1,5 +1,5 @@
 ---
-title: "Your first campaign"
+title: "Start guide: new admin"
 description: "Learn how to move through the Epsilo workspace, explore dashboards, and find key automation modules quickly."
 ---
 
