Documentation edits made through Mintlify web editor

--- a/a-getting-started/quick-start-new-admin.mdx
+++ b/a-getting-started/quick-start-new-admin.mdx
@@ -1,5 +1,5 @@
 ---
-title: "Start guide: new admin"
+title: "Quick start for new admin"
 description: "Learn how to move through the Epsilo workspace, explore dashboards, and find key automation modules quickly."
 ---
 
